# K-BrowseComp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
automated_data_gen/: README.md  mine_seed_bank.py
automated_data_gen/problem_generation/: README.md  _load_env.py  launch.sh  launch_codex.sh  litellm_grader.py  monitor.py  perplexity_check.py  run.py  run_codex.py  solver_runner.py  task_spec_template.md
automated_data_gen/seed_expansion/: README.md  run.py  run_all.sh  task_spec_template.md
docs/: DEVELOPMENT.md
examples/: k_browsecomp_colab.ipynb
search_evals/: debug_runs.py  io_utils.py  logging_utils.py  run_eval.py  show_results.py
search_evals/agents/: __init__.py  deep_research.py  single_step_search.py  types.py
search_evals/agents/llms/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  openai_chat.py  openrouter.py  tool_helper.py
search_evals/agents/tools/: __init__.py  base.py  open_url.py  search_web.py  toolset.py
search_evals/datasets/: __init__.py  dataset.py  ko_browsecomp.jsonl  ko_browsecomp_synthetic.jsonl
search_evals/search_engines/: __init__.py  brave.py  exa.py  perplexity.py  registry.py  tavily.py  types.py
search_evals/suites/: __init__.py  graders.py  ko_browsecomp.py  registry.py  types.py
tests/: __init__.py  conftest.py
tests/agents/: __init__.py  test_openai_llms.py  test_openrouter_llms.py  test_single_step_search.py  test_types.py
tests/datasets/: __init__.py  test_dataset.py
tests/search_engines/: __init__.py  test_registry.py  test_types.py
tests/suites/: __init__.py  test_registry.py  test_types.py
