# Portions adapted from https://github.com/perplexityai/search_evals/blob/main/pyproject.toml
# Original license: MIT.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "search-evals"
version = "0.1.0"
description = "Search evaluation tools and benchmarks"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Perplexity AI"}]
keywords = ["search", "evaluation", "benchmarks", "ai"]
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.52.0",
    "exa-py>=1.15.6",
    "chz",
    "ipdb>=0.13.13",
    "openai>=1.108.1",
    "orjson>=3.11.3",
    "perplexityai>=0.10.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.12",
    "tenacity>=8.0.0",
    "tiktoken>=0.11.0",
    "google-genai>=1.63.0",
    "litellm>=1.83.0",
    "datasets>=4.8.5",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.13.1",
    "types-tabulate==0.9.0.20241207",
]
analysis = [
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["search_evals*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["search_evals"]
omit = [
    "tests/*",
    "setup.py",
    "search_evals/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
explicit_package_bases = true
ignore_missing_imports = false

enable_error_code = [
    "deprecated",
    "ignore-without-code",
    "mutable-override",
    "possibly-undefined",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
]

[[tool.mypy.overrides]]
# type hints or stubs do not exist for these libraries
module = [
    "chz",
    "datasets",
    "exa",
    "orjson",
    "pytest",
    "tabulate",
    "tavily",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# test files use pytest fixtures which create untyped decorators
module = "tests.*"
disallow_untyped_decorators = false

[dependency-groups]
dev = [
    "mypy>=1.18",
    "ruff>=0.13.1",
]
